# PMPL-agent

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  env-sample.txt  pyproject.toml  test_simple.py
.cursor/rules/: development-guidelines.mdc  docker-rules.mdc
.devcontainer/: devcontainer.json
config/: default.yaml  personas.yaml
data/discussions/: 96608e58-8aa8-4216-b5b9-dd5038054730.json
docker/: Dockerfile
reports/: report_96608e58-8aa8-4216-b5b9-dd5038054730.md
specs/: README.md  requirements_specification.md  technical_specification.md
src/pmpl_agent_system/: __init__.py  cli.py
src/pmpl_agent_system/agents/: coordinator.py  personas.py
src/pmpl_agent_system/config/: settings.py
src/pmpl_agent_system/core/: system.py
src/pmpl_agent_system/llm/: manager.py
src/pmpl_agent_system/models/: data.py.backup
src/pmpl_agent_system/storage/: local.py
tests/: test_basic.py
